kubernetes/tuwunel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tuwunel
  namespace: tuwunel
spec:
  type: ClusterIP
  ports:
    - port: 8008
      targetPort: 8008
      name: http
  selector:
    app: tuwunel
---
apiVersion: v1
kind: Service
metadata:
  name: tuwunel-federation
  namespace: tuwunel
  annotations:
    metallb.universe.tf/address-pool: first-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.4.245
spec:
  type: LoadBalancer
  ports:
    - port: 8448
      targetPort: 8008
      name: federation
  selector:
    app: tuwunel
